k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odiapedia
spec:
  selector:
    app: odiapedia
  ports:
    - name: http
      port: 80
      targetPort: http
